force-app/main/default/objects/cel_campaign_transaction__c/cel_campaign_transaction__c.object-meta.xml
<CustomObject>
    <description>Transactions and Lines for a Campaign Report</description>
    <label>Campaign Transaction</label>
    <nameField>
        <label>Campaign Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>