force-app/main/default/objects/cel_campaign_transaction__c/fields/cel_campaign__c.field-meta.xml
<CustomField>
    <fullName>cel_campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns Transactions</relationshipLabel>
    <relationshipName>Campaigns_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>