force-app/main/default/objects/cel_campaign_transaction__c/fields/cel_transaction__c.field-meta.xml
<CustomField>
    <fullName>cel_transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transactions</label>
    <referenceTo>cel_Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Campaigns_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>