force-app/main/default/objects/cel_campaign_transaction__c/fields/cel_transaction_line__c.field-meta.xml
<CustomField>
    <fullName>cel_transaction_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Line</label>
    <referenceTo>cel_Transaction_Line__c</referenceTo>
    <relationshipLabel>Campaigns Transactions</relationshipLabel>
    <relationshipName>Campaigns_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>