force-app/main/default/objects/cel_campaign_transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>cel_campaign__c</columns>
    <columns>cel_transaction__c</columns>
    <columns>cel_transaction_line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>